--- a/charts/oblik/templates/rbac.yaml
+++ b/charts/oblik/templates/rbac.yaml
@@ -12,7 +12,13 @@ rules:
   - apiGroups: [""]
     resources: ["pods"]
     verbs: ["get", "watch", "list"]
-  - apiGroups: ["autoscaling.k8s.io"]
+  - apiGroups: ["metrics.k8s.io"]
+    resources: ["pods"]
+    verbs: ["get", "list", "watch"]
+  - apiGroups: ["apps"]
+    resources: ["deployments", "statefulsets"]
+    verbs: ["get", "list", "watch", "update", "patch"]
+  - apiGroups: ["autoscaling.k8s.io", "autoscaling"]
     resources: ["verticalpodautoscalers", "horizontalpodautoscalers"]
     verbs: ["get", "watch", "list", "create", "delete", "update"]
   - apiGroups: ["socialgouv.io"]
@@ -31,6 +37,5 @@ roleRef:
   kind: ClusterRole
   name: oblik-operator
   apiGroup: rbac.authorization.k8s.io
-
 ---
 
