--- a/charts/oblik/templates/rbac.yaml
+++ b/charts/oblik/templates/rbac.yaml
@@ -20,7 +20,7 @@ rules:
     verbs: ["get", "list", "watch", "update", "patch"]
   - apiGroups: ["autoscaling.k8s.io", "autoscaling"]
     resources: ["verticalpodautoscalers", "horizontalpodautoscalers"]
-    verbs: ["get", "watch", "list", "create", "delete", "update"]
+    verbs: ["get", "watch", "list", "create", "delete", "update", "patch"]
   - apiGroups: ["socialgouv.io"]
     resources: ["oblikpodautoscalers"]
     verbs: ["get", "watch", "list", "create", "update", "patch", "delete"]
