--- a/charts/oblik/templates/rbac.yaml
+++ b/charts/oblik/templates/rbac.yaml
@@ -15,6 +15,9 @@ rules:
   - apiGroups: ["apps"]
     resources: ["deployments", "statefulsets"]
     verbs: ["get", "list", "watch", "update", "patch"]
+  - apiGroups: ["batch"]
+    resources: ["cronjobs"]
+    verbs: ["get", "list", "watch", "update", "patch"]
   - apiGroups: ["autoscaling.k8s.io", "autoscaling"]
     resources: ["verticalpodautoscalers", "horizontalpodautoscalers"]
     verbs: ["get", "watch", "list", "create", "delete", "update", "patch"]
