chore: test wip

--- a/charts/oblik/templates/deployment.yaml
+++ b/charts/oblik/templates/deployment.yaml
@@ -25,6 +25,20 @@ spec:
           {{ end }}
           ports:
             - containerPort: 9443
+          env:
+          {{- range $key, $value := .Values.env }}
+            - name: {{ $key }}
+              value: {{ $value | quote }}
+          {{- end }}
+          {{ if .Values.existingSecret }}
+          envFrom:
+            - secretRef:
+                  name: {{.Values.existingSecret }}
+          {{ end }}
+          {{- with .Values.resources }}
+          resources:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
           volumeMounts:
             - name: webhook-certs
               mountPath: /etc/webhook/certs
