--- a/charts/oblik/templates/deployment.yaml
+++ b/charts/oblik/templates/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: oblik
+  annotations: {{ .Values.annotations | toYaml | nindent 4 }}
 spec:
   replicas: 1
   selector:
@@ -11,13 +12,14 @@ spec:
     metadata:
       labels:
         app: oblik
+      annotations: {{ .Values.annotations | toYaml | nindent 8 }}
     spec:
       serviceAccountName: oblik-operator
       containers:
         - name: oblik
           image: "{{ .Values.image.repository }}:{{ or .Values.image.tag "latest" }}"
           {{ if .Values.image.pullPolicy }}
-          imagePullPolicy: "{{ .Values.image.tag }}"
+          imagePullPolicy: "{{ .Values.image.pullPolicy }}"
           {{ else if .Values.image.tag }}
           imagePullPolicy: IfNotPresent
           {{ else }}
