--- a/.github/workflows/tests-e2e.yaml
+++ b/.github/workflows/tests-e2e.yaml
@@ -26,17 +26,33 @@ jobs:
       with:
         version: v3.11.1
 
-    - name: Install kubectl
-      uses: azure/setup-kubectl@v3
-      with:
-        version: 'v1.26.0'
 
     - name: Install Kind
-      run: |
-        curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.17.0/kind-linux-amd64
-        chmod +x ./kind
-        sudo mv ./kind /usr/local/bin/kind
+      uses: bakito/kind-with-registry-action@main
+      with:
+        kind_version:    v0.23.0
+        kubectl_version: v1.30.0
+        ingress_enabled: true
+        registry_image:  registry:2
+        node_image:      kindest/node:v1.27.3
+
+    # - name: Install kubectl
+    #   uses: azure/setup-kubectl@v3
+    #   with:
+    #     version: 'v1.26.0'
+
+    # - name: Install Kind
+    #   run: |
+    #     curl -Lo ./kind https://kind.sigs.k8s.io/dl/v0.17.0/kind-linux-amd64
+    #     chmod +x ./kind
+    #     sudo mv ./kind /usr/local/bin/kind
 
     - name: Run E2E tests
+      shell: bash
       run: |
-        ./tests/e2e.sh
+        # ./tests/e2e.sh
+        set -eo errexit
+        export KUBECONFIG="${HOME}/.kube/config"
+        $(dirname $0)/install-dependencies.sh
+        $(dirname $0)/deploy-oblik.sh
+        $(dirname $0)/test-oblik.sh $@
