--- a/.github/workflows/tests-e2e.yaml
+++ b/.github/workflows/tests-e2e.yaml
@@ -34,7 +34,7 @@ jobs:
       with:
         kind_version:    v0.23.0
         kubectl_version: v1.30.0
-        ingress_enabled: true
+        ingress_enabled: false
         registry_image:  registry:2
         node_image:      kindest/node:v1.27.3
 
