--- a/tests/oblik_e2e_testcases.yaml
+++ b/tests/oblik_e2e_testcases.yaml
@@ -64,7 +64,7 @@ test_cases:
       oblik.socialgouv.io/enabled: "true"
       oblik.socialgouv.io/webhook-enabled: "false"
       oblik.socialgouv.io/increase-request-cpu-algo: "ratio"
-      oblik.socialgouv.io/increase-request-cpu-value: "1.1"
+      oblik.socialgouv.io/increase-request-cpu-value: "5" # of 25m (5 * 25m)
     original:
       requests:
         cpu: 100m
@@ -74,10 +74,10 @@ test_cases:
         memory: 250Mi
     expected:
       requests:
-        cpu: 110m
+        cpu: 125m
         memory: 250Mi
       limits:
-        cpu: 110m
+        cpu: 125m
         memory: 250Mi
 
   - name: TestIncreaseMemoryRequestMargin
