--- a/.github/workflows/tests-e2e.yaml
+++ b/.github/workflows/tests-e2e.yaml
@@ -40,6 +40,8 @@ jobs:
 
     - name: Run E2E tests
       shell: bash
+      env:
+        OBLIK_TEST_DISABLE_HA: "1"
       run: |
         set -eo errexit
         export KUBECONFIG="${HOME}/.kube/config"
