--- a/charts/oblik/templates/mutating-webhook.yaml
+++ b/charts/oblik/templates/mutating-webhook.yaml
@@ -54,6 +54,7 @@ webhooks:
         - v1
         operations:
         - CREATE
+        - UPDATE
         resources:
         - deployments
         - statefulsets
@@ -64,10 +65,13 @@ webhooks:
         - v1
         operations:
         - CREATE
+        - UPDATE
         resources:
         - cronjobs
         scope: '*'
-      - operations: [ "CREATE" ]
+      - operations:
+        - CREATE
+        - UPDATE
         apiGroups: [ "postgresql.cnpg.io" ]
         apiVersions: [ "v1" ]
         resources: [ "clusters" ]
