--- a/.github/workflows/docker-release.yaml
+++ b/.github/workflows/docker-release.yaml
@@ -21,6 +21,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Extract Git Tag
+        id: get_tag
+        run: |
+          if [[ ${{ github.ref }} == refs/tags/* ]]; then
+            echo "GIT_TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+          else
+            echo "GIT_TAG=$(git describe --tags --abbrev=0 || echo 'v0.0.0')" >> $GITHUB_OUTPUT
+          fi
+
       - name: Log in to the Container registry
         uses: docker/login-action@v2
         with:
@@ -51,4 +60,5 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
+          build-args: |
+            VERSION=${{ steps.get_tag.outputs.GIT_TAG }}
