--- a/charts/oblik/templates/deployment.yaml
+++ b/charts/oblik/templates/deployment.yaml
@@ -25,8 +25,9 @@ spec:
           {{ else }}
           imagePullPolicy: Always
           {{ end }}
-          {{ if gt (int .Values.replicas) 1 }}
           args:
+          - "operator"
+          {{ if gt (int .Values.replicas) 1 }}
           - "--leader-elect"
           {{ end }}
           ports:
