--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -13,12 +13,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
         with:
-          go-version: '1.20'
+          go-version: '1.22'
           cache: false
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v3
-        with:
-          version: latest
 
   makefile-lint:
     name: Makefile Lint
@@ -26,4 +22,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Run lint target
-        run: make lint
+        run: |
+          make install-lint-tools
+          make lint
