--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+          token: ${{ secrets.SOCIALGROOVYBOT_BOTO_PAT }}
 
       - name: Set up Go
         uses: actions/setup-go@v4
