fix: release workflow

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -28,27 +28,21 @@ jobs:
         with:
           go-version: '1.x'
 
-      - name: Get next tag
-        id: next-tag
-        run: echo "tag=$(make next-tag)" >> $GITHUB_OUTPUT
-
-      - name: Create and push tag
-        run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git tag ${{ steps.next-tag.outputs.tag }}
-          git push origin ${{ steps.next-tag.outputs.tag }}
-
       - name: Install tools
         run: make install-release-tools
 
       - name: Generate changelog
         run: make changelog
 
-      - name: Amend commit with updated CHANGELOG.md
-        run: |
-          git add CHANGELOG.md
-          git commit --amend --no-edit
+      - name: Get next tag
+        id: next-tag
+        run: echo "tag=$(make next-tag)" >> $GITHUB_OUTPUT
 
-      - name: Push changes
-        run: git push --force-with-lease origin main
+      - name: Create release commit, push changes, and create tag
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add CHANGELOG.md
+          git commit -m "chore(release): ${{ steps.next-tag.outputs.tag }}"
+          git tag ${{ steps.next-tag.outputs.tag }}
+          git push origin HEAD:main --tags
