--- a/.github/workflows/go-release.yaml
+++ b/.github/workflows/go-release.yaml
@@ -1,9 +1,8 @@
 name: 🎁 Go Release
 
 on:
-  push:
-    tags:
-      - 'v*.*.*'
+  release:
+    types: [created]
 
 jobs:
   releases-matrix:
@@ -20,7 +19,7 @@ jobs:
           - goarch: arm64
             goos: windows
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - uses: wangyoucao577/go-release-action@v1.51
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
