--- a/.github/workflows/go-release.yaml
+++ b/.github/workflows/go-release.yaml
@@ -28,6 +28,7 @@ jobs:
         goversion: "https://dl.google.com/go/go1.22.0.linux-amd64.tar.gz"
         project_path: "."
         binary_name: "oblik"
-        build_flags: -mod vendor -ldflags="-X 'github.com/SocialGouv/oblik/pkg/cli.Version=${{ github.ref_name }}'"
+        build_flags: -mod vendor
+        ldflags: -X 'github.com/SocialGouv/oblik/pkg/cli.Version=${{ github.ref_name }}'
         compress_assets: "FALSE"
         # extra_files: LICENSE README.md
