--- a/charts/oblik/templates/deployment.yaml
+++ b/charts/oblik/templates/deployment.yaml
@@ -33,6 +33,14 @@ spec:
           ports:
             - containerPort: 9443
           env:
+            - name: NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
+            - name: SERVICE_ACCOUNT
+              valueFrom:
+                fieldRef:
+                  fieldPath: spec.serviceAccountName
           {{- range $key, $value := .Values.env }}
             - name: {{ $key }}
               value: {{ $value | quote }}
