--- a/charts/oblik/templates/deployment.yaml
+++ b/charts/oblik/templates/deployment.yaml
@@ -32,6 +32,22 @@ spec:
           {{ end }}
           ports:
             - containerPort: 9443
+          readinessProbe:
+            httpGet:
+              path: /readyz
+              port: 8081
+            initialDelaySeconds: 10
+            periodSeconds: 10
+            timeoutSeconds: 5
+            failureThreshold: 1
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8081
+            initialDelaySeconds: 15
+            periodSeconds: 20
+            timeoutSeconds: 5
+            failureThreshold: 3
           env:
             - name: NAMESPACE
               valueFrom:
