fix(ci-cd): use token-bureau

--- a/.github/workflows/github-release.yaml
+++ b/.github/workflows/github-release.yaml
@@ -2,14 +2,23 @@ name: 🐙 Github Release
 
 on: push
 
+permissions:
+  id-token: write  # Required for OIDC token generation
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Get GitHub App Token
+        id: token
+        uses: SocialGouv/token-bureau@main
+        with:
+          token-bureau-url: http://token-bureau.fabrique.social.gouv.fr
+          audience: socialgouv
       - name: Checkout
         uses: actions/checkout@v4
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          token: ${{ secrets.SOCIALGROOVYBOT_BOTO_PAT }}
+          token: ${{ steps.token.outputs.token }}
