--- a/.github/workflows/github-release.yaml
+++ b/.github/workflows/github-release.yaml
@@ -1,6 +1,8 @@
 name: 🐙 Github Release
 
-on: push
+on:
+  push:
+  workflow_dispatch:
 
 permissions:
   id-token: write  # Required for OIDC token generation
