--- a/.github/workflows/github-release.yaml
+++ b/.github/workflows/github-release.yaml
@@ -10,6 +10,9 @@ permissions:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      ACTIONS_STEP_DEBUG: true
+      ACTIONS_RUNNER_DEBUG: true
     steps:
       - name: Get GitHub App Token
         id: token
