fix: add more logging for debug

--- a/charts/oblik/values.yaml
+++ b/charts/oblik/values.yaml
@@ -9,6 +9,13 @@ webhook:
   enabled: true
   failurePolicy: Fail # Fail or Ignore
 
+# Additional arguments to pass to the operator
+args: []
+# Example:
+# args:
+#   - "-v=2"  # Enable debug logging
+#   - "-v=3"  # Enable verbose debug logging
+
 env: {}
 
 existingSecret: 
