--- a/charts/oblik/templates/deployment.yaml
+++ b/charts/oblik/templates/deployment.yaml
@@ -30,6 +30,9 @@ spec:
           {{ if gt (int .Values.replicas) 1 }}
           - "--leader-elect"
           {{ end }}
+          {{- range .Values.args }}
+          - {{ . | quote }}
+          {{- end }}
           ports:
             - containerPort: 9443
           readinessProbe:
