--- a/charts/oblik/templates/rbac.yaml
+++ b/charts/oblik/templates/rbac.yaml
@@ -30,6 +30,9 @@ rules:
   - apiGroups: ["apiextensions.k8s.io"]
     resources: ["customresourcedefinitions"]
     verbs: ["get"]
+  - apiGroups: ["oblik.socialgouv.io"]
+    resources: ["resourcesconfigs", "resourcesconfigs/status"]
+    verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
