--- a/.github/workflows/publish-chart.yaml
+++ b/.github/workflows/publish-chart.yaml
@@ -54,5 +54,4 @@ jobs:
           # Construct the OCI tag using the chart's base directory, name, and version
           OCI_TAG="ghcr.io/SocialGouv/${CHART_BASE}/${CHART_NAME}:${CHART_VERSION}"
           echo "Saving chart to OCI tag: $OCI_TAG"
-          helm package "packaged/${CHART_PACKAGE}" "$OCI_TAG"
-          helm push "$OCI_TAG"
+          helm push "packaged/${CHART_PACKAGE}" "$OCI_TAG"
